# python-glanceclient

./: .coveragerc  .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.py  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: apiv2.rst  conf.py  index.rst
glanceclient/: __init__.py  _i18n.py  base.py  client.py  exc.py  service_catalog.py  shell.py  utils.py  version.py
glanceclient/common/: base.py  exceptions.py  http.py  https.py  progressbar.py  utils.py
glanceclient/generic/: client.py  shell.py
glanceclient/tests/: utils.py
glanceclient/v1/: __init__.py  client.py  image_members.py  images.py  legacy_shell.py  shell.py  versions.py
glanceclient/v1_1/: client.py  images.py  shell.py
glanceclient/v2/: __init__.py  cache.py  client.py  image_members.py  image_schema.py  image_tags.py  images.py  info.py  metadefs.py  namespace_schema.py  resource_type_schema.py  schemas.py  shell.py  tasks.py  versions.py
glanceclient/v3/: __init__.py  artifacts.py  client.py
releasenotes/notes/: 2.16.0_Release-43ebe06b74a272ba.yaml  2.17.0_Release-c67392be3b428d10.yaml  3.0.0_Release-1337ddc753b88905.yaml  3.1.1_Release-a452f4709d7d9a7d.yaml  3.6.0_Release-04d3b5017747290b.yaml  4.3.0_Release-1a7acbd472e16c72.yaml  4.4.0_Release-a3c89184f345e5a2.yaml  4.6.0_releasenotes-99ed8ea49481ee01.yaml  add-member-get-command-11c15e0a94ecd39a.yaml  add-support-for-glance-download-import-method-10525254db3e8e7a.yaml  add_new_locations_apis_support-1ceb47178d384d58.yaml  check-for-md5-59db8fd67870b214.yaml  (+27 more)
tests/: keystone_client_fixtures.py  test_base.py  test_client.py  test_exc.py  test_http.py  test_progressbar.py  test_shell.py  test_ssl.py  test_test.py  test_utils.py  utils.py
tools/: fix_ca_bundle.sh  generate_test_certs.sh  glance.bash_completion  install_venv.py  pip-requires  test-requires  tox_install.sh  with_venv.sh
(+92 files in other folders)
